--- a/src/pages/Sign/style.scss
+++ b/src/pages/Sign/style.scss
@@ -35,6 +35,7 @@
     @include screenHeight(700px) {
         scale: 0.7;
     }
+
     @include screen(768px) {
         scale: 0.9;
         height: max-content;
@@ -165,6 +166,54 @@ form {
     }
 }
 
+.membership-agreement-box {
+
+    h1 {
+        text-align: center;
+        font-size: 25px;
+        border-bottom: 2px solid rgb(239, 239, 239);
+        padding-bottom: 10px;
+    }
+
+    .membership-terms-box {
+        padding: 10px 20px 0px 15px;
+        height: 500px;
+        margin-top: 15px;
+        overflow: scroll;
+        @include CustomScroll();
+
+        @include screenHeight(600px) {
+            height: 300px;
+        }
+
+        @media (max-width:768px) {
+            height: 100vh;
+        }
+
+        h4 {
+            margin: 20px 0px;
+            font-size: 18px;
+
+            &:nth-child(1) {
+                margin-top: 0px;
+            }
+        }
+
+        p {
+            font-size: 13px;
+            margin: 10px 0px;
+            font-weight: 500;
+            color: var(--text-dark-gray);
+            text-align: justify;
+
+            strong {
+                font-weight: 700;
+            }
+        }
+    }
+
+}
+
 // ------------------------------- Sign -------------------------------
 
 
@@ -206,6 +255,10 @@ form {
             font-size: 15px;
             font-style: normal;
             font-weight: 600;
+
+            @include screen(768px){
+                text-align: center;
+            }
         }
     }
 
@@ -302,6 +355,7 @@ form {
                 color: var(--blue);
                 font-size: 13px;
                 font-weight: 600;
+
             }
         }
 
@@ -313,7 +367,7 @@ form {
     .membership-agreement-box {
         margin-top: 22px;
         display: flex;
-        gap: 3px;
+
 
         @include flex-center(row, center, center);
 
