--- a/src/layout/style.scss
+++ b/src/layout/style.scss
@@ -10,5 +10,11 @@
         flex: 1;
         width: 100%;
         overflow: hidden;
+        position: relative;
+             
+        .outlet-content{
+            margin-left: 65px;
+        }
+       
     }
 }
