--- a/src/shared/styles/base/appColors.scss
+++ b/src/shared/styles/base/appColors.scss
@@ -10,6 +10,7 @@
     --text-white: rgb(252, 252, 252);
   
     --smooth-white-color: #F9F9F9;
+    --smooth-border-color: #EAEAEA;
     --user-message-box-color: #F0F0F0;
     --user-message-text-color: #595959;
   
