--- a/src/components/Home/style.scss
+++ b/src/components/Home/style.scss
@@ -1,13 +1,12 @@
 @use "../../shared/styles/main.scss" as *;
 
 .home-general-box {
-    @include flex-center(column, flex-start, center);
+    @include flex-center(column, center, center);
     flex: 1;
     height: 100%;
     gap: 10px;
 
     .laptop-banner-box {
-        margin-top: 50px;
         width: 100%;
         height: 35%;
         @include flex-center(row, center, center);
@@ -19,7 +18,7 @@
 
     .informations-box {
         @include flex-center(column, center, center);
-        gap: 20px;
+        gap: 22px;
         width: 100%;
 
         h2 {
@@ -32,6 +31,7 @@
             text-align: center;
             color: var(--text-dark-gray);
             font-weight: 500;
+            font-size: 15px;
         }
 
         button {
@@ -46,15 +46,5 @@
                 background-color: var(--hoverBlue);
             }
         }
-    }
-
-    .e2e-info-box {
-        margin-bottom: 50px;
-        @include flex-center(row, center, center);
-        gap: 5px;
-        color: #818181;
-        position: absolute;
-        bottom: 0;
-        font-size: 14px;
     }
 }
