--- a/src/layout/Dashboard/components/style.scss
+++ b/src/layout/Dashboard/components/style.scss
@@ -44,7 +44,8 @@
     }
 }
 
-.user-message-card-box {
+.user-dashboard-card-box,
+.group-dashboard-card-box {
     margin-top: 15px;
     @include flex-center(row, center, center);
     width: 100%;
@@ -52,14 +53,13 @@
     gap: 5px;
     cursor: pointer;
     @include transition();
+    border-radius: 17px;
 
     &:first-child {
         margin-top: 0px;
     }
 
     &:hover {
-        border-radius: 17px;
-
         background-color: var(--user-message-box-color);
     }
 
@@ -78,20 +78,29 @@
             width: 14px;
             height: 14px;
             border-radius: 50%;
-            background-color: #26D97A;
+
             border: 2px solid var(--smooth-white-color);
             position: absolute;
             right: 2px;
             bottom: 2px;
 
+            &.online {
+                background-color: #26D97A;
+            }
+
+            &.offline {
+                background-color: #B2B2B2;
+            }
+
 
         }
     }
 
-    .user-name-and-message {
+    .user-name-and-sub-title,
+    .grup-name-and-sub-title {
         @include flex-center(column, center);
-        padding: 0px 10px;
-        width: 145px;
+        padding: 0px 5px;
+        width: 125px;
         gap: 2px;
 
         p {
@@ -124,14 +133,16 @@
         }
     }
 
-    .message-informations-box {
+    .status-informations-box {
         @include flex-center(column, center, center);
-        gap: 2px;
+        gap: 4px;
 
         span {
             color: #A7A7A7;
             font-family: Montserrat;
             font-size: 12px;
+            width: 75px;
+            text-align: center
         }
 
         p {
@@ -144,6 +155,15 @@
             font-size: 11px;
         }
     }
+
+    .call-status-span {
+        margin-top: 2px;
+
+        .icon {
+            font-size: 16px;
+        }
+
+    }
 }
 
 
@@ -155,8 +175,15 @@
     height: 100%;
 }
 
+.call-list-box,
+.archive-list-box {
+    .user-list {
+        margin-top: 16px;
+    }
+}
+
+.group-list-box {}
+
 .user-list {
-    height: 100%;
-    overflow: scroll;
     scrollbar-width: none;
 }
