--- a/src/components/Chats/style.scss
+++ b/src/components/Chats/style.scss
@@ -1,4 +1,105 @@
-.chat-general-box{
+@use "../../shared/styles/main.scss" as *;
+
+.chat-general-box {
     flex: 1;
     height: 100%;
+    @include flex-center(column, space-between, center);
+
+    .user-top-bar {
+        @include flex-center(row, space-between, center);
+        height: 70px;
+        width: 100%;
+        border-bottom: 2px solid var(--smooth-border-color);
+        padding: 0px 15px;
+
+        .user-info {
+            @include flex-center(row, flex-start, center);
+            gap: 8px;
+
+            .image-box {
+                position: relative;
+
+                img {
+                    width: 55px;
+                    height: 55px;
+                    object-fit: cover;
+                    border-radius: 50%;
+                }
+
+                .status {
+                    width: 14px;
+                    height: 14px;
+                    border-radius: 50%;
+
+                    border: 2px solid var(--smooth-white-color);
+                    position: absolute;
+                    right: 2px;
+                    bottom: 2px;
+
+                    &.online {
+                        background-color: #26D97A;
+                    }
+
+                    &.offline {
+                        background-color: #B2B2B2;
+                    }
+                }
+            }
+
+
+            .name-and-status-box {
+                @include flex-center(column, center, flex-start);
+                gap: 1px;
+                height: 100%;
+
+                .user-name {
+                    columns: var(--text-black);
+                    font-weight: 800;
+                    font-size: 15px;
+
+                }
+
+                span {
+                    font-size: 12px;
+                    color: var(--text-dark-gray);
+                }
+            }
+
+        }
+
+        .top-bar-buttons {
+            @include flex-center(row, center, center);
+            gap: 15px;
+
+            .call-options {
+                @include flex-center(row, center, center);
+                gap: 10px;
+
+                button {
+                    background-color: transparent;
+                    @include flex-center(row, center, center);
+                    padding: 10px;
+                    color: var(--blue);
+                    font-size: 26px;
+                    @include transition();
+                    border-radius: 15px;
+
+                    &:hover {
+                        background-color: var(--smooth-blue);
+                    }
+                }
+            }
+
+            .show-sidebar-button {
+                @include flex-center(column, center, center);
+                font-size: 24px;
+                width: 32px;
+                height: 32px;
+                cursor: pointer;
+                border-radius: 50%;
+                color: var(--blue);
+            }
+        }
+    }
+
 }
