--- a/src/components/Chats/style.scss
+++ b/src/components/Chats/style.scss
@@ -2,22 +2,23 @@
 
 
 .chat-general-box {
+    @include flex-center(column, space-between, center);
     flex: 1;
     height: 100%;
-    @include flex-center(column, space-between, center);
 
     .user-top-bar {
         @include flex-center(row, space-between, center);
-        height: 70px;
+        height: 90px;
         width: 100%;
         border-bottom: 2px solid var(--smooth-border-color);
         padding: 0px 15px;
-        transition: transform 0.6s ease, opacity 0.6s ease, visibility 0.6s ease;
-        
+        transition: transform 0.5s ease, opacity 0.5s ease, visibility 0.5s ease;
+
         &.close {
             transform: translateY(-100%);
             opacity: 0;
             visibility: hidden;
+            height: 0px;
         }
 
         .user-info {
@@ -102,13 +103,49 @@
 
     .user-message-bar {
         width: 100%;
-        flex: 1;
+        height: 100%;
+        overflow: scroll;
+        overflow-x: hidden;
+        position: relative;
+
+        .messages-list {
+            display: flex;
+            flex-direction: column;
+            width: 100%;
+            flex: 1;
+            padding: 10px 20px;
+        }
+
+        .date-group {
+            margin-bottom: 20px;
+
+            .date-heading {
+                font-size: 13px;
+                font-weight: 500;
+                color: var(--text-input-gray);
+                text-align: center;
+                height: 60px;
+                @include flex-center(row, center, center);
+            }
+        }
+
+        .bottom-transparent-linear-gradient {
+            position: sticky;
+            bottom: 0;
+            height: 20px;
+            width: 100%;
+            background: linear-gradient(to top, rgb(255, 255, 255), rgba(51, 51, 51, 0));
+        }
+    }
+
+    .user-message-bar::-webkit-scrollbar-track {
+        background: transparent;
+        border-radius: 6px;
     }
 
 }
 
 .user-details-sidebar {
-
     height: 100%;
     width: 0px;
     background-color: var(--smooth-white-color);
@@ -121,6 +158,129 @@
         padding: 18px 15px 0px 15px;
         width: 340px;
         opacity: 1;
+    }
+
+    .sidebar-content-box {
+        @include flex-center(column, center, center);
+        width: 100%;
+        height: auto;
+
+        .user-info-box,
+        .biography {
+            @include flex-center(column, center, center);
+        }
+
+        .user-info-box {
+            img {
+                width: 120px;
+                height: 120px;
+                border-radius: 50%;
+                object-fit: cover;
+            }
+
+            p {
+                margin: 10px 0px 2px 0px;
+                color: var(--text-black);
+                font-size: 22px;
+                font-weight: 700;
+            }
+
+            span {
+                font-size: 14px;
+                color: var(--text-input-gray);
+            }
+
+        }
+
+        .status {
+            width: max-content;
+            background-color: rgb(241, 241, 241);
+            padding: 5px 10px;
+            border-radius: 30px;
+            margin-top: 15px;
+            @include flex-center(row, center, center);
+            gap: 6px;
+           
+
+            .circle {
+                width: 13px;
+                height: 13px;
+                background-color: #26D97A;
+                border-radius: 50%;
+            }
+
+            p {
+                color: #26D97A;
+                font-size: 14px;
+                font-weight: 500;
+            }
+        }
+
+        .status-2{
+            margin-top: 15px;
+            @include flex-center(column, center, center);
+            p{
+                font-weight: 700;
+                font-size: 15px;
+            }
+            span{
+                color: var(--text-input-gray);
+                font-size: 14px;
+            }
+        }
+        .biography {
+            margin:20px 0px;
+
+            strong {
+                font-size: 15px;
+                font-weight: 700;
+                color: var(--text-black)
+            }
+
+            .line {
+                margin: 10px 0px;
+                border-radius: 30px;
+                height: 4px;
+                width: 80%;
+                background-color: var(--blue);
+            }
+
+            p {
+                font-size: 14px;
+                text-align: center;
+                color: var(--text-dark-gray);
+            }
+        }
+
+        .call-buttons {
+            margin-top: 10px;
+            width: 100%;
+            @include flex-center(row, center, center);
+            gap: 40px;
+            padding-left: 13px;
+
+            .button-box {
+                @include flex-center(column, center, center);
+                gap: 6px;
+           
+
+                button {
+                    @include flex-center(row, center, center);
+                    width: 60px;
+                    height: 60px;
+                    background-color: var(--smooth-blue);
+                    color: var(--blue);
+                    font-size: 28px;
+                    border-radius: 50%;
+                }
+
+                p {
+                    font-size: 13px;
+                    color: var(--blue);
+                    font-weight: 700;
+                }
+            }
+        }
     }
 }
 
