--- a/src/shared/components/MessageInputBar/style.scss
+++ b/src/shared/components/MessageInputBar/style.scss
@@ -1,9 +1,9 @@
 @use "../../../shared/styles/main.scss" as *;
 
 .message-input-bar {
-    border-top: 2px solid var(--smooth-border-color);
     width: 100%;
-    height: 80px;
+    height: 100px;
+
     @include flex-center(row, center, center);
 
     .input-box {
@@ -11,7 +11,7 @@
         height: 50px;
         border-radius: 30px;
         border: 3px solid var(--smooth-border-color);
-        padding: 0 4px;
+        padding: 0px 4px;
         width: 95%;
         gap: 10px;
 
@@ -22,8 +22,8 @@
 
             .add-file-button {
                 @include flex-center(row, center, center);
-                width: 35px;
-                height: 35px;
+                width: 31px;
+                height: 31px;
                 font-size: 20px;
                 background-color: #E7E7E7;
                 border-radius: 50%;
@@ -35,7 +35,7 @@
         input {
             height: 100%;
             width: 100%;
-            font-size: 15px;
+            font-size: 14px;
             color: var(--text-dark-gray);
         }
 
