--- a/src/shared/components/MessageBubble/style.scss
+++ b/src/shared/components/MessageBubble/style.scss
@@ -9,11 +9,23 @@
         flex-direction: row;
         width: 100%;
         gap: 10px;
+        height: max-content;
+
+        .image-box {
+
+            img {
+                width: 40px;
+                border-radius: 50%;
+                object-fit: cover;
+            }
+        }
 
         &.sender {
             justify-content: flex-end;
+            align-items: center;
 
             .message-text {
+                @include flex-center(column, center, center);
                 order: 2;
                 background: var(--blue);
                 color: var(--text-white);
@@ -21,6 +33,7 @@
 
             .message-hour {
                 order: 1;
+
             }
 
         }
@@ -29,14 +42,26 @@
             display: flex;
             min-width: 50px;
             max-width: 340px;
-            padding: 9px 18px;
+            padding: 8px 18px;
             justify-content: center;
             align-items: center;
             border-radius: 14px;
             background: #F0F0F0;
             color: var(--user-message-text-color);
             font-size: 14px;
+            @include flex-center(column, center, flex-start);
 
+            .user-info {
+                width: 100%;
+                @include flex-center(row, flex-start, center);
+                padding: 0px 0px 2px 0px;
+
+                p {
+                    font-weight: bold;
+                    color: var(--text-dark-gray);
+                }
+
+            }
         }
 
         .message-hour {
