Call Modal Implemented with Call Sound

--- a/src/shared/styles/base/appColors.scss
+++ b/src/shared/styles/base/appColors.scss
@@ -3,6 +3,7 @@
   --hoverBlue: #4a4ed8;
   --smooth-blue: #CFD5F2;
   --smooth-blue-hover: #c7cdf0;
+  --smooth-light-blue: #E8EBFD;
 
   --smooth-red: #EB6262;
 
