--- a/src/components/Calls/Components/CallModal.scss
+++ b/src/components/Calls/Components/CallModal.scss
@@ -4,7 +4,11 @@
     @include flex-center(column, space-between, center);
     width: 500px;
     height: 390px;
-
+ 
+    @include screen(768px){
+        width: 100%;
+        height: 100%;
+    }
 
 
     .logo-and-e2e-box {
@@ -53,6 +57,12 @@
         background: var(--smooth-light-blue);
         border-radius: 40px;
         width: 370px;
+
+        @include screen(768px){
+            width: 330px;
+          
+        }
+    
 
         button {
             @include flex-center(row, center, center);
