--- a/src/shared/components/MessageBubble/style.scss
+++ b/src/shared/components/MessageBubble/style.scss
@@ -20,6 +20,7 @@
             }
         }
 
+
         &.sender {
             justify-content: flex-end;
             align-items: center;
@@ -46,7 +47,7 @@
             justify-content: center;
             align-items: center;
             border-radius: 14px;
-            background: #F0F0F0;
+            background: var(--user-message-box-color);
             color: var(--user-message-text-color);
             font-size: 14px;
             @include flex-center(column, center, flex-start);
