--- a/src/shared/components/MessageBubble/style.scss
+++ b/src/shared/components/MessageBubble/style.scss
@@ -25,7 +25,7 @@
             justify-content: flex-end;
             align-items: center;
 
-            .message-text {
+            .message-content {
                 @include flex-center(column, center, center);
                 order: 2;
                 background: var(--blue);
@@ -39,7 +39,7 @@
 
         }
 
-        .message-text {
+        .message-content {
             display: flex;
             min-width: 50px;
             max-width: 340px;
@@ -62,6 +62,12 @@
                     color: var(--text-dark-gray);
                 }
 
+            }
+            .image{
+                max-height: 350px;
+                border-radius: 5px;
+                margin-top: 5px;
+                margin-bottom: 5px;
             }
         }
 
