--- a/src/components/Groups/Components/NewGroup/style.scss
+++ b/src/components/Groups/Components/NewGroup/style.scss
@@ -158,7 +158,7 @@
             .other-users .user-box {
                 @include flex-center(row, space-between, center);
                 width: 100%;
-                gap: 15px;
+                margin-bottom: 15px;
             }
 
             .remove-user-box {
