Updated file name of ChatsAndGroup scss as layout.scss in the component folder. Implemented archives component without any real data.

--- a/src/components/layout.scss
+++ b/src/components/layout.scss
@@ -2,7 +2,7 @@
 
 
 .chat-general-box,
-.group-general-box {
+.group-general-box,.archive-general-box {
     @include flex-center(column, space-between, center);
     flex: 1;
     height: 100%;
